<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="dialog" type="jp.toastkid.media.image.preview.ImagePreviewDialogFragment" />
        <variable name="colorFilterUseCase" type="jp.toastkid.media.image.preview.ColorFilterUseCase" />
        <variable name="imageRotationUseCase" type="jp.toastkid.media.image.preview.ImageRotationUseCase" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.google.android.material.slider.Slider
            android:id="@+id/contrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:valueFrom="0.0"
            android:valueTo="1.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.slider.Slider
            android:id="@+id/alpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:valueFrom="-0.75"
            android:valueTo="0.75"
            app:layout_constraintTop_toBottomOf="@id/contrast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@id/alpha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <ImageView
                android:id="@+id/reverse_filter"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_monochrome"
                app:tint="@color/lime_bg"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{view -> colorFilterUseCase.reverseFilter()}"
                android:contentDescription="@string/content_description_reverse_color"
                />

            <ImageView
                android:id="@+id/sepia"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_monochrome"
                app:tint="@color/deep_orange_500_dd"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{view -> colorFilterUseCase.sepia()}"
                android:contentDescription="@string/content_description_sepia_color_filter"
                />
            <ImageView
                android:id="@+id/gray_scale"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_monochrome"
                app:tint="@color/pre4_ripple"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{view -> colorFilterUseCase.grayScale()}"
                android:contentDescription="@string/content_description_gray_scale"
                />

            <ImageView
                android:id="@+id/rotate_left"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_rotate_left"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{view -> imageRotationUseCase.rotateLeft()}"
                android:contentDescription="@string/content_description_rotate_left"
                />
            <ImageView
                android:id="@+id/reverse"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="12dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_flip"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{view -> imageRotationUseCase.reverse()}"
                android:contentDescription="@string/content_description_reverse_image"
                />
            <ImageView
                android:id="@+id/rotate_right"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="12dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_rotate_right"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{view -> imageRotationUseCase.rotateRight()}"
                android:contentDescription="@string/content_description_rotate_right"
                />
            <ImageView
                android:id="@+id/set_to"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="12dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_set_to"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{view -> dialog.setTo()}"
                android:contentDescription="@string/content_description_set_to"
                />
            <ImageView
                android:id="@+id/edit"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="12dp"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_brush"
                android:background="@drawable/ripple_transparent"
                android:onClick="@{view -> dialog.edit()}"
                android:contentDescription="@string/content_description_edit_image"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>